Inconsistency between man page and actual available command line options

Man page mentions `--clipboard` but in `SpectacleCore.cpp` it actually expects `--copy-image`.
Also, `--copy-path` is not mentioned at all in the man page.
Change man page to reflect codee and add `--copy-path` to man page.

BUG: 446710